--- a/dart_funcoes_colecoes/pubspec.yaml
+++ b/dart_funcoes_colecoes/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dart_funcoes_colecoes
-description: A sample command-line application.
+description: Modulo da academia do flutter de funcoes e colecoes 
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://www.example.com
 
 environment:
   sdk: '>=2.17.0-182.1.beta <3.0.0'
