--- a/Projetos/flutter_maonamassa/pubspec.yaml
+++ b/Projetos/flutter_maonamassa/pubspec.yaml
@@ -59,7 +59,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -74,11 +74,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+     - family: RobotoCondensed
+       fonts:
+         - asset: assets/fonts/RobotoCondensed-Light.ttf
+         - asset: assets/fonts/RobotoCondensed-Regular.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
