--- a/DartWeek/DW9/dw9_delivery_app/pubspec.yaml
+++ b/DartWeek/DW9/dw9_delivery_app/pubspec.yaml
@@ -60,9 +60,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -75,17 +74,19 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: mplus1
+      fonts:
+        - asset: assets/fonts/mplus1/MPLUS1p-Light.ttf
+          weight: 300
+        - asset: assets/fonts/mplus1/MPLUS1p-Regular.ttf
+          style: normal
+        - asset: assets/fonts/mplus1/MPLUS1p-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/mplus1/MPLUS1p-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/mplus1/MPLUS1p-ExtraBold.ttf
+          weight: 800
+
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
