--- a/DartWeek/DW9/dw9_delivery_app/pubspec.yaml
+++ b/DartWeek/DW9/dw9_delivery_app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_dotenv: ^5.0.2
   dio: ^4.0.6
+  provider: ^6.0.5
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
