--- a/DartWeek/DW9/dw9_delivery_app/pubspec.yaml
+++ b/DartWeek/DW9/dw9_delivery_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   dio: ^4.0.6
   provider: ^6.0.5
   intl: ^0.18.0
+  loading_animation_widget: ^1.2.0+4
+  top_snackbar_flutter: ^3.0.0+1
 
 dev_dependencies:
   flutter_test:
